--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -1,6 +1,15 @@
 {
+  "scripts": {
+    "compile": "npx hardhat compile",
+    "test": "npx hardhat test",
+    "node": "npx hardhat node",
+    "deploy": "npx hardhat run scripts/deploy.ts",
+    "deploy-local": "concurrently \"npm run node\" \"wait-on http://127.0.0.1:8545/ && npx hardhat run scripts/deploy.ts --network localhost\""
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "hardhat": "^2.19.2"
+    "concurrently": "^8.2.2",
+    "hardhat": "^2.19.2",
+    "wait-on": "^7.2.0"
   }
 }
