--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -11,5 +11,8 @@
     "concurrently": "^8.2.2",
     "hardhat": "^2.19.2",
     "wait-on": "^7.2.0"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.0.1"
   }
 }
