chore: new monorepo setup

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@dice/root",
+  "name": "@dice",
   "version": "0.1.0",
   "private": true,
-  "workspaces": ["apps/*", "services/*"]
+  "workspaces": ["packages/*"]
 }
