feat: theme changer

--- a/packages/dice-webapp/package.json
+++ b/packages/dice-webapp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nextui-org/button": "^2.0.26",
+    "@nextui-org/switch": "^2.0.25",
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.17",
     "framer-motion": "^10.16.16",
