--- a/packages/dice-webapp/package.json
+++ b/packages/dice-webapp/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lintfix": "next lint --fix"
   },
   "dependencies": {
     "@nextui-org/button": "^2.0.26",
