--- a/packages/dice-webapp/package.json
+++ b/packages/dice-webapp/package.json
@@ -7,6 +7,7 @@
     "lint": "next lint",
     "lintfix": "next lint --fix",
     "prisma:migrate": "npx prisma migrate dev --name dev",
+    "prisma:push": "npx prisma db push --accept-data-loss",
     "prisma:generate": "npx prisma generate",
     "prisma:seed": "npx prisma db seed",
     "dev": "next dev",
