--- a/packages/dice-webapp/package.json
+++ b/packages/dice-webapp/package.json
@@ -10,6 +10,7 @@
     "prisma:push": "npx prisma db push --accept-data-loss",
     "prisma:generate": "npx prisma generate",
     "prisma:seed": "npx prisma db seed",
+    "prisma:studio": "npx prisma studio",
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start"
