--- a/packages/dice-webapp/package.json
+++ b/packages/dice-webapp/package.json
@@ -15,10 +15,11 @@
     "build": "prisma generate && next build",
     "start": "next start"
   },
-  "prisma":{
+  "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.12",
     "@nextui-org/button": "^2.0.26",
     "@nextui-org/switch": "^2.0.25",
     "@nextui-org/system": "^2.0.15",
@@ -26,6 +27,7 @@
     "@prisma/client": "^5.7.1",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18"
