feat: google authentication

--- a/packages/dice-webapp/.env.example
+++ b/packages/dice-webapp/.env.example
@@ -1,5 +1,5 @@
-GOOGLE_ID='YOUR_GOOGLE_ID_HERE'
-GOOGLE_SECRET='YOUR_GOOGLE_SECRET_HERE'
+GOOGLE_CLIENT_ID='YOUR_GOOGLE_ID_HERE'
+GOOGLE_CLIENT_SECRET='YOUR_GOOGLE_SECRET_HERE'
 NEXTAUTH_SECRET="SUPER_SECRET_STRING_HERE"
 NEXTAUTH_URL="http://localhost:3000"
 
