--- a/packages/dice-webapp/package.json
+++ b/packages/dice-webapp/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
     "@nextui-org/button": "^2.0.26",
+    "@nextui-org/card": "^2.0.24",
     "@nextui-org/switch": "^2.0.25",
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.17",
@@ -30,7 +31,8 @@
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
