--- a/packages/dice-webapp/package.json
+++ b/packages/dice-webapp/package.json
@@ -22,6 +22,8 @@
     "@auth/prisma-adapter": "^1.0.12",
     "@nextui-org/button": "^2.0.26",
     "@nextui-org/card": "^2.0.24",
+    "@nextui-org/chip": "^2.0.25",
+    "@nextui-org/code": "^2.0.24",
     "@nextui-org/switch": "^2.0.25",
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.17",
