--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prepare": "husky install",
     "lint": "pnpm -r lint",
     "lintfix": "pnpm -r lintfix",
-    "pre-commit": "pnpm run lint",
+    "prettify": "pnpm exec prettier . --write",
+    "pre-commit": "pnpm run prettify && pnpm run lint",
     "test": "pnpm -r test",
     "contract:compile": "pnpm --filter @dice/contract compile",
     "contract:deploy": "pnpm --filter @dice/contract local-deploy",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "prettier": "3.1.1"
   }
 }
