--- a/packages/dice-webapp/package.json
+++ b/packages/dice-webapp/package.json
@@ -24,6 +24,7 @@
     "@nextui-org/card": "^2.0.24",
     "@nextui-org/chip": "^2.0.25",
     "@nextui-org/code": "^2.0.24",
+    "@nextui-org/input": "^2.1.16",
     "@nextui-org/switch": "^2.0.25",
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.17",
