--- a/packages/dice-webapp/package.json
+++ b/packages/dice-webapp/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
+    "@nextui-org/avatar": "^2.0.24",
     "@nextui-org/button": "^2.0.26",
     "@nextui-org/card": "^2.0.24",
     "@nextui-org/chip": "^2.0.25",
