--- a/packages/dice-webapp/package.json
+++ b/packages/dice-webapp/package.json
@@ -30,6 +30,7 @@
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.17",
     "@prisma/client": "^5.7.1",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
