--- a/packages/dice-webapp/package.json
+++ b/packages/dice-webapp/package.json
@@ -20,14 +20,12 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
-    "@nextui-org/switch": "^2.0.25",
-    "@nextui-org/system": "^2.0.15",
-    "@nextui-org/theme": "^2.1.17",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^10.16.16",
