--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "@commitlint/config-conventional": "^18.4.3",
     "husky": "^8.0.0",
     "prettier": "3.1.1"
+  },
+  "dependencies": {
+    "react-minimal-pie-chart": "^8.4.0"
   }
 }
