--- a/packages/dice-webapp/package.json
+++ b/packages/dice-webapp/package.json
@@ -37,6 +37,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-minimal-pie-chart": "^8.4.0",
+    "react-tooltip": "^5.26.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
