--- a/packages/dice-webapp/package.json
+++ b/packages/dice-webapp/package.json
@@ -44,7 +44,8 @@
     "react-minimal-pie-chart": "^8.4.0",
     "react-tooltip": "^5.26.0",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
