feat: fetching the user profile on server side

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "pnpm -r lint",
     "lintfix": "pnpm -r lintfix",
     "prettify": "pnpm exec prettier . --write",
+    "format": "pnpm run prettify && pnpm run lintfix",
     "pre-commit": "pnpm run lint",
     "test": "pnpm -r test",
     "contract:compile": "pnpm --filter @dice/contract compile",
