chore: remove unused env vars

--- a/packages/dice-webapp/.env.example
+++ b/packages/dice-webapp/.env.example
@@ -1,6 +1,4 @@
-GOOGLE_CLIENT_ID="YOUR_GOOGLE_ID_HERE"
-GOOGLE_CLIENT_SECRET="YOUR_GOOGLE_SECRET_HERE"
 NEXTAUTH_SECRET="SUPER_SECRET_STRING_HERE"
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL=http://localhost:3000/
 
 # Rename to .env.local and fill in the values
