feat: web3.js provider setup

--- a/packages/dice-webapp/package.json
+++ b/packages/dice-webapp/package.json
@@ -46,6 +46,7 @@
     "react-tooltip": "^5.26.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "web3": "^4.6.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
