--- a/packages/dice-webapp/package.json
+++ b/packages/dice-webapp/package.json
@@ -22,6 +22,7 @@
     "@auth/prisma-adapter": "^1.0.12",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.0.5",
