feat: env.example update

--- a/packages/dice-webapp/.env.example
+++ b/packages/dice-webapp/.env.example
@@ -1,4 +1,5 @@
 NEXTAUTH_SECRET="SUPER_SECRET_STRING_HERE"
 NEXTAUTH_URL=http://localhost:3000/
+PINATA_JWT="PASTE_YOUR_PINATA_JWT_HERE"
 
 # Rename to .env.local and fill in the values
