chore: env vars

--- a/packages/dice-webapp/.env.example
+++ b/packages/dice-webapp/.env.example
@@ -2,5 +2,7 @@ NEXTAUTH_SECRET="SUPER_SECRET_STRING_HERE"
 NEXTAUTH_URL=http://localhost:3000/
 PINATA_JWT="PASTE_YOUR_PINATA_JWT_HERE"
 NEXT_PUBLIC_CONTRACT="0x5fbdb2315678afecb367f032d93f642f64180aa3" # Local Node
+DATABASE_URI="file:dev.db" # local sqlite
+DATABASE_DIRECT_URL="file:dev.db"
 
 # Rename to .env.local and fill in the values
